--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 *:focus {
-  outline: 3px dashed #228bec;
+  outline: 3px solid #228bec;
   outline-offset: 0;
 }
 html {
@@ -269,7 +269,7 @@ body {
 }
 .c-cb > input[type="checkbox"]:focus + label::before {
   border-width: 4px;
-  outline: 3px dashed #228bec;
+  outline: 3px solid #228bec;
 }
 .c-cb > label::after {
   box-sizing: content-box;
